--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,23 @@
     <title>Intro</title>
 </head>
 <body>
-    <h1>Nginx works!</h1>    
+    <pre>
+.----------------.  .----------------.  .-----------------. .----------------.  .----------------.
+| .--------------. || .--------------. || .--------------. || .--------------. || .--------------. |
+| |     ______   | || |  ________    | || | ____  _____  | || |   _______    | || |   _______    | |
+| |   .' ___  |  | || | |_   ___ `.  | || ||_   \|_   _| | || |  |  ___  |   | || |  |  ___  |   | |
+| |  / .'   \_|  | || |   | |   `. \ | || |  |   \ | |   | || |  |_/  / /    | || |  |_/  / /    | |
+| |  | |         | || |   | |    | | | || |  | |\ \| |   | || |      / /     | || |      / /     | |
+| |  \ `.___.'\  | || |  _| |___.' / | || | _| |_\   |_  | || |     / /      | || |     / /      | |
+| |   `._____.'  | || | |________.'  | || ||_____|\____| | || |    /_/       | || |    /_/       | |
+| |              | || |              | || |              | || |              | || |              | |
+| '--------------' || '--------------' || '--------------' || '--------------' || '--------------' |
+'----------------'  '----------------'  '----------------'  '----------------'  '----------------'
+
+ ___   _         ___   _      ___   ___   ____    _       ___   _  _____  _      __    ___  _____
+| |_) \ \_/     / / \ | |\ | | | \ | |_) | |_    | |     | |_) | |  | |  | |_|  / /\  | |_)  | |
+|_|_)  |_|      \_\_/ |_| \| |_|_/ |_| \ |_|__ \_|_|     |_|   |_|  |_|  |_| | /_/--\ |_| \  |_|
+    </pre>
     <p>Configured by Reactive(O. Pithart) in 2023</p>
 </body>
 </html>
